AC_INIT
AC_PATH_PROG(PERL,perl)
AC_OUTPUT_COMMANDS([chmod a+x simplemake])
# We have to redefine the variables that autoconf always substitutes and that
# are used in simplemake
CFLAGS='@CFLAGS@'
FFLAGS='@FFLAGS@'
CXXFLAGS='@CXXFLAGS@'
# These substitutions don't work using the cygwin tools:
#top_srcdir='@top_srcdir@'
#prefix='@prefix@'
#exec_prefix='@exec_prefix@'
#bindir='@bindir@'
#sbindir='@sbindir@'
#libdir='@libdir@'
#includedir='@includedir@'
# Ergh. srcdir cannot be changed because autoconf uses its value to find
# the source files.
#srcdir='@srcdir@'
AC_OUTPUT(simplemake)
