# -*- Mode: shell-script; -*-
AC_INIT
AC_PATH_PROG(PERL,perl)
AC_OUTPUT_COMMANDS([chmod a+x simplemake checkbuilds getstates showsizes getcoverage f77tof90])
# We have to redefine the variables that autoconf always substitutes and that
# are used in simplemake
CFLAGS='@CFLAGS@'
FFLAGS='@FFLAGS@'
CXXFLAGS='@CXXFLAGS@'
# The directory substitutions apparently don't work under Cygwin, so
# simplemake manufactures these in a way that avoids triggering the 
# autoconf replacement.
# Note that top_srcdir and srcdir are special cases (they must not
# be changed in configure.in because configure uses them to find other files)
AC_OUTPUT(simplemake checkbuilds getstates showsizes getcoverage f77tof90)
